--- a/fleximatic/wizard/sale_details.xml
+++ b/fleximatic/wizard/sale_details.xml
@@ -10,6 +10,7 @@
                      
                         <group>                       
                                 <field name="sale" readonly="1"  /> 
+                                 <field name="date_order" readonly="1"  /> 
                                 <field name="product_id" options="{'no_create_edit': True,'no_create': True}"  />
                                  <field name="pricelist_id" options="{'no_create_edit': True,'no_create': True}"  />    
                                  <field name="pricelist_avaible" readonly="1"  />    
