--- a/fleximatic/wizard/sale_details.xml
+++ b/fleximatic/wizard/sale_details.xml
@@ -18,12 +18,13 @@
                         </group>
                        
                 </group>
-                <!--
+            
                 <footer>
-                    <button name="generate_report" string="Aplicar descuento" type="object" class="btn-primary"/>
-
+                    <button name="apply_next" string="Apply and next" type="object" class="btn-primary"/>
+                    <button name="apply" string="Apply" type="object" class="btn-primary"/>
+                    
                 </footer>
-                -->
+            
             </form>
         </field>
     </record>
