--- a/fleximatic/wizard/sale_details.xml
+++ b/fleximatic/wizard/sale_details.xml
@@ -22,7 +22,7 @@
                 <footer>
                     <button name="generate_apply_next" string="Apply and next" type="object" class="btn-primary"/>
                     <button name="generate_apply" string="Apply" type="object" class="btn-primary"/>
-                    
+                     <button string="Discard" class="btn btn-secondary" special="cancel"/>
                 </footer>
             
             </form>
