--- a/fleximatic/wizard/sale_details.xml
+++ b/fleximatic/wizard/sale_details.xml
@@ -29,9 +29,12 @@
                   </group>
             
                 <footer>
-                    <button name="generate_apply_next" string="Apply and next" type="object" class="btn-primary"/>
-                    <button name="generate_apply" string="Apply" type="object" class="btn-primary"/>
-                     <button string="Discard" class="btn btn-secondary" special="cancel"/>
+                    <button name="generate_apply_next" string="Apply and next" type="object" class="btn-primary"
+                    attrs="{'invisible': [ '|' ,('product_id', '=', '') ,('pricelist_id', '=', '')  ]   }"/>
+                    <button name="generate_apply" string="Apply" type="object" class="btn-primary"
+                    attrs="{'invisible': [ '|' ,('product_id', '=', '') ,('pricelist_id', '=', '')  ]   }"
+                    />
+                     <button string="Close" class="btn btn-secondary" special="cancel"/>
                 </footer>
             
             </form>
