--- a/fleximatic/wizard/sale_details.xml
+++ b/fleximatic/wizard/sale_details.xml
@@ -12,7 +12,9 @@
                                 <field name="sale" readonly="1"  /> 
                                  <field name="date_order" readonly="1"  /> 
                                 <field name="product_id" options="{'no_create_edit': True,'no_create': True}"  />
-                                 <field name="pricelist_id" options="{'no_create_edit': True,'no_create': True}"  />    
+                                 <field name="pricelist_id" 
+                                  attrs="{'invisible': [ ('product_id', '=', False)   ]   }"
+                                 options="{'no_create_edit': True,'no_create': True}"  />    
                                  
                                 
                         </group>
@@ -24,7 +26,8 @@
                         <div class="row">
                                     <div class="col-12">
                                         <field name="pricelist_avaible" readonly="1"  
-                                        />  
+                                          attrs="{'invisible': [ ('product_id', '=', False)   ]   }"
+                                         />  
                                     </div>
                         </div>
                   </group>
