--- a/fleximatic/wizard/sale_details.xml
+++ b/fleximatic/wizard/sale_details.xml
@@ -9,8 +9,8 @@
               <group>
                      
                         <group>                       
-                                <field name="sale" readonly="1"  /> 
-                                 <field name="date_order" readonly="1"  /> 
+                                <field name="sale" invisible="1"  /> 
+                                 <field name="date_order" invisible="1"  /> 
                                 <field name="product_id" options="{'no_create_edit': True,'no_create': True}"  />
                                  <field name="pricelist_id" 
                                   attrs="{'invisible': [ ('product_id', '=', False)   ]   }"
