--- a/fleximatic/wizard/promotional_products.xml
+++ b/fleximatic/wizard/promotional_products.xml
@@ -3,7 +3,7 @@
     <data>
         <record id="view_sale_products_wizard" model="ir.ui.view">
             <field name="name">sale.promotional.wizard.form</field>
-            <field name="model"></field>
+            <field name="model">product.promotional</field>
             <field name="arch" type="xml">
                 <form string="Promotional Products" context="{'default_promotional_id':active_id}">
                     <field name="promotional_line">
