--- a/fleximatic/wizard/promotional_products.xml
+++ b/fleximatic/wizard/promotional_products.xml
@@ -8,7 +8,7 @@
                 <form string="Promotional Products">
                     <field name="promotional_line">
                         <tree editable="bottom" class="text-center">
-                            <field name="product_template_id"/>
+                            <field name="product_template_id" options="{'no_open': True, 'no_create_edit': True}"/>
                             <field name="qty"/>
                             <field name="price_points"/>
                             <field name="uom_id"/>
@@ -18,7 +18,7 @@
                     <group>
                         <group class="text-right">
                             <field name="points" readonly="1"/>
-                            <field name="sale_id"/>
+                            <field name="sale_id" invisible="1"/>
                         </group>
                         <group class="text-right">
                             <field name="points_to_sale"/>
