--- a/fleximatic/wizard/promotional_products.xml
+++ b/fleximatic/wizard/promotional_products.xml
@@ -9,7 +9,7 @@
                     <field name="promotional_line">
                         <tree editable="bottom" class="text-center">
                             <field name="product_id" options="{'no_open': True, 'no_create_edit': True}"/>
-                            <field name="product_template_id" options="{'no_open': True, 'no_create_edit': True}"/>
+                            <field name="product_template_id" invisible="1" options="{'no_open': True, 'no_create_edit': True}"/>
                             <field name="qty"/>
                             <field name="price_points"/>
                             <field name="uom_id"/>
