--- a/fleximatic/wizard/promotional_products.xml
+++ b/fleximatic/wizard/promotional_products.xml
@@ -16,6 +16,9 @@
                             <field name="total"/>
                         </tree>
                     </field>
+                    <h2 attrs="{'invisible':[('points', '>=', 0)]}">
+                        Not enough points to add product(s)
+                    </h2>
                     <group>
                         <group class="text-right">
                             <field name="points" readonly="1"/>
@@ -26,7 +29,7 @@
                         </group>
                     </group>
                     <footer>
-                        <button name="add_promotional_products" string="Add products" type="object" class="btn-primary"/>
+                        <button name="add_promotional_products" string="Add products" type="object" class="btn-primary" attrs="{'invisible':[('points', '<', 0)]}"/>
                         <button name="cancel" string="Close" type="object" class="btn-primary"/>
                     </footer>
                 </form>
