--- a/fleximatic/wizard/fleximatic_multi_confirm_sale.xml
+++ b/fleximatic/wizard/fleximatic_multi_confirm_sale.xml
@@ -6,31 +6,23 @@
             <field name="model">fleximatic.multi.confirm.sale</field>
             <field name="arch" type="xml">
                 <form string="Merge Leads/Opportunities">
-                <!--
-                    <group string="Assign opportunities to">
-                        <field name="user_id" class="oe_inline"/>
-                        <field name="team_id" class="oe_inline" kanban_view_ref="%(sales_team.crm_team_view_kanban)s"/>
-                    </group>
-                    <group string="Select Leads/Opportunities">
-                        <field name="opportunity_ids" nolabel="1">
+            
+                   
+                    <group string="Sale orders">
+                        <field name="sales_ids" nolabel="1" readonly="1">
                             <tree>
-                                <field name="create_date"/>
                                 <field name="name"/>
-                                <field name="type"/>
-                                <field name="contact_name"/>
-                                <field name="email_from"/>
-                                <field name="phone"/>
-                                <field name="stage_id"/>
-                                <field name="user_id"/>
-                                <field name="team_id"/>
+                                <field name="state"/>
+                                
                             </tree>
                         </field>
                     </group>
+               
                     <footer>
-                        <button name="action_merge" type="object" string="Merge" class="btn-primary"/>
-                        <button string="Cancel" class="btn-secondary" special="cancel"/>
+                        <button name="action_confirm" type="object" string="Confirm all" class="btn-primary"/>
+                        
                     </footer>
-                -->
+                
                 </form>
             </field>
         </record>
