--- a/fleximatic/wizard/fleximatic_multi_confirm_sale.xml
+++ b/fleximatic/wizard/fleximatic_multi_confirm_sale.xml
@@ -5,10 +5,11 @@
             <field name="name">fleximatic.multi.confirm.sale.form</field>
             <field name="model">fleximatic.multi.confirm.sale</field>
             <field name="arch" type="xml">
-                <form string="Merge Leads/Opportunities">
+                <form string="Multi confirm sales">
             
                    
                     <group string="Sale orders">
+                        <h2>Selected sales</h2>
                         <field name="sales_ids" nolabel="1" readonly="1">
                             <tree>
                                 <field name="name"/>
