--- a/fleximatic/wizard/fleximatic_multi_confirm_sale.xml
+++ b/fleximatic/wizard/fleximatic_multi_confirm_sale.xml
@@ -7,11 +7,8 @@
             <field name="arch" type="xml">
                 <form string="Multi confirm sales">
             
-                    <group string="Sale orders">
-                        <h2>Selected sales</h2>
-                        
-                    </group>
-                    <group string="Sale orders">
+                  
+                    <group string="Salected orders">
                        
                         <field name="sales_ids" nolabel="1" readonly="1">
                             <tree>
