--- a/fleximatic/wizard/fleximatic_multi_confirm_sale.xml
+++ b/fleximatic/wizard/fleximatic_multi_confirm_sale.xml
@@ -20,7 +20,7 @@
                     </group>
                
                       <footer>
-                        <button name="action_confirm" string="Generate purchase" type="object" class="btn-primary"/>
+                        <button name="action_confirm" string="Confirm all" type="object" class="btn-primary"/>
                         <button name="cancel" string="Cancel" type="object" class="btn-primary"/>
                     </footer>
                 
